# nexgml

./: .gitignore  README.md  pyproject.toml
nexgml_docs/linear/basic_models/: GSBasicClassifier.md  GSBasicRegressor.md
nexgml_docs/linear/intense_models/: GSIntenseClassifier.md  GSIntenseRegressor.md
nexgml_docs/linear/penalty_based/: ElasticNetClassifier.md  ElasticNetRegressor.md  L1Classifier.md  L1Regressor.md  L2Classifier.md  L2Regressor.md
nexgml_docs/tree/forest_backend/: FBClassifier.md  FBRegressor.md
nexgml_docs/tree/tree_backend/: TBClassifier.md  TBRegressor.md
src/nexgml/: __init__.py
src/nexgml/amo/: __init__.py
src/nexgml/amo/forlinear/: __init__.py  derivs.py  losses.py  penalties.py  probas.py
src/nexgml/amo/fortree/: __init__.py  impurities.py
src/nexgml/guardians/: __init__.py  arr.py  detect.py
src/nexgml/indexing/: __init__.py  detecting.py  encoding.py  indexing.py
src/nexgml/linear/: __init__.py
src/nexgml/linear/basic_models/: GSBasicClassifier.py  GSBasicRegressor.py
src/nexgml/linear/intense_models/: GSIntenseClassifier.py  GSIntenseRegressor.py
src/nexgml/linear/penalty_based/: ElasticNetClassifier.py  ElasticNetRegressor.py  L1Classifier.py  L1Regressor.py  L2Classifier.py  L2Regressor.py
src/nexgml/metrics/: __init__.py  forclassi.py  forregress.py
src/nexgml/tree/: __init__.py
src/nexgml/tree/forest_backend/: FBClassifier.py  FBRegressor.py
src/nexgml/tree/tree_backend/: TBClassifier.py  TBRegressor.py
